<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.detailfilm.InfoFilmFragment"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/infofilm_background">

        <LinearLayout
            android:id="@+id/linearlayout_content_infofilm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/tv_contenttitle_infofilm"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold">

            </TextView>

            <at.blogc.android.views.ExpandableTextView
                android:id="@+id/tv_content_infofilm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ellipsize="end"
                android:maxLines="5"
                android:text="No Time to Die is a 2021 spy film and the 25th in the James Bond series produced by Eon Productions. It stars Daniel Craig in his fifth and final outing as the fictional British MI6 agent James Bond. It is directed by Cary Joji Fukunaga from a screenplay by Neal Purvis, Robert Wade, Fukunaga and Phoebe Waller-Bridge. Léa Seydoux, Ben Whishaw, Naomie Harris, Jeffrey Wright, Christoph Waltz, Rory Kinnear and Ralph Fiennes reprise their roles from previous films, with Rami Malek, Lashana Lynch, Billy Magnussen, Ana de Armas, David Dencik and Dali Benssalah also starring. In this film, Bond, who has left active service with MI6, is recruited by the CIA to rescue a kidnapped scientist, which leads to a showdown with a powerful adversary."
                android:textSize="16sp"
                app:animation_duration="500">

            </at.blogc.android.views.ExpandableTextView>

            <TextView
                android:id="@+id/tv_togglecontent_infofilm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/tv_contentshowmore_infofilm"
                android:textColor="#f58020"
                android:textSize="16sp">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearlayout_actor_infofilm"
            android:layout_width="0dp"
            android:layout_height="230dp"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearlayout_content_infofilm">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/tv_actortitle_infofilm"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold">

            </TextView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_actor_infofilm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearlayout_director_infofilm"
            android:layout_width="0dp"
            android:layout_height="230dp"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearlayout_actor_infofilm">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_directortitle_infofilm"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="20dp">

            </TextView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_director_infofilm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>